2001-07-18  Sven Wischnowsky  <wischnow@zsh.org>

	* 15402 (Akinora Musha): Completion/Unix/Command/_cvs: add
	support for -R option on BSDs

2001-07-17  Oliver Kiddle  <opk@zsh.org>

	* 15393 (Akinori Musha): Completion/Unix/Command/_chown: use
	colon separator for BSD

2001-07-17  Sven Wischnowsky  <wischnow@zsh.org>

	* 15400: Completion/Unix/Type/_path_files,
	Completion/Zsh/Command/_zstyle, Doc/Zsh/compsys.yo: add
	preserve-prefix style to keep pathname prefix unchanged

2001-07-10  Sven Wischnowsky  <wischnow@zsh.org>

	* 15357: Completion/Base/Completer/_prefix, Src/Zle/compcore.c,
	Src/Zle/zle_tricky.c: prefix completion: make e-o-c-p leave a
	space before the cursor, make _prefix leave the cursor after
	the inserted match even if only a single match; and make the
	C-code not show explanation strings if the completion function
	it doesn't want a list

	* 15352: Completion/Unix/Command/_man: remove not only numeric
	suffixes, but also `.n' and the like

2001-07-09  Bart Schaefer  <schaefer@zsh.org>

	* 15321: Src/exec.c: Fix line numbers in an error message; unwind
	function context properly on obscure autoloading failures.

2001-07-07  Bart Schaefer  <schaefer@zsh.org>

	* 15308: Src/builtin.c: Fix infinite loop on `r OLD=NEW' when OLD
	is the empty string, by rejecting replacements with an empty OLD.

2001-07-06  Oliver Kiddle  <opk@zsh.org>

	* 15252 (and Akinori Musha: 15245): Completion/BSD/Command/_kld,
	Completion/Unix/Command/_sysctl: Add exclusion lists and use
	_multi_parts for BSD completion of sysctl.

2001-07-06  Sven Wischnowsky  <wischnow@zsh.org>

	* 15283: Completion/Unix/Type/_path_files: when looking for
	parameter expansions, ignore `$'s with a backslash before them

2001-07-05  Peter Stephenson  <pws@csr.com>

	* 15277: Src/glob.c: bug with ${(S)...%%...}: the indices
	for start and end of backreferences were incorrect.

	* 15264: Doc/Zsh/grammar.yo: improve description of use of